--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -14,7 +14,6 @@ jobs:
         python-version: [3.7]
         language: [ 'java']
     steps:
-      - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: '11'
@@ -26,15 +25,15 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
       - name: Build BOM
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           repository: www-splitcells-net/net.splitcells.network.bom
-      - name: Build
         run: |
-          cd $GITHUB_WORKSPACE/..
-          git clone git@github.com:www-splitcells-net/net.splitcells.network.bom.git
-          cd net.splitcells.network.bom
+          cd $GITHUB_WORKSPACE
           mvn install
+      - name: Build
+        uses: actions/checkout@v2
+        run: |
           cd $GITHUB_WORKSPACE/projects/net.splitcells.system.root
           echo $GITHUB_WORKSPACE
           export test_codecov=1
