--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -14,6 +14,7 @@ jobs:
         python-version: [3.7]
         language: [ 'java']
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
           java-version: '11'
@@ -24,15 +25,14 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - name: Build BOM
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           repository: www-splitcells-net/net.splitcells.network.bom
+      - name: Build BOM
         run: |
-          cd $GITHUB_WORKSPACE
+          cd $GITHUB_WORKSPACE/../net.splitcells.network.bom
           mvn install
       - name: Build
-        uses: actions/checkout@v2
         run: |
           cd $GITHUB_WORKSPACE/projects/net.splitcells.system.root
           echo $GITHUB_WORKSPACE
