#190 Try to fix using multiple repos for build.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -29,7 +29,7 @@ jobs:
           repository: www-splitcells-net/net.splitcells.network.bom
       - name: Build BOM
         run: |
-          cd $GITHUB_WORKSPACE/../net.splitcells.network.bom
+          cd $GITHUB_WORKSPACE
           mvn install
       - uses: actions/checkout@v2
       - name: Build
