#190 Try to minimize number of builds on GitHub.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -37,5 +37,6 @@ jobs:
           cd $GITHUB_WORKSPACE/projects/net.splitcells.system.root
           echo $GITHUB_WORKSPACE
           export test_codecov=1
-          ./bin/build
+          ./bin/build.part.with.python
+          mvn -B clean install org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=www-splitcells-net_net.splitcells.network -Dsonar.test.exclusions=src/main/java/** -DskipTests -Dsonar.organization=www-splitcells-net -Dsonar.host.url=https://sonarcloud.io
           bash <(curl -s https://codecov.io/bash) # Upload tests to codecov.io.
