#190 Add missing env.
Signed-off-by: Mārtiņš Avots <martins.avots@splitcells.net>

--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -33,6 +33,9 @@ jobs:
           mvn install
       - uses: actions/checkout@v2
       - name: Build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           cd $GITHUB_WORKSPACE/projects/net.splitcells.system.root
           echo $GITHUB_WORKSPACE
