--- a/.github/workflows/net.splitcells.system.build.yml
+++ b/.github/workflows/net.splitcells.system.build.yml
@@ -24,14 +24,14 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@main
         with:
           repository: www-splitcells-net/net.splitcells.network.bom
       - name: Build BOM
         run: |
           cd $GITHUB_WORKSPACE
           mvn install
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@main
       - name: Build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
