--- a/projects/net.splitcells.os.state.interface.lib/pom.xml
+++ b/projects/net.splitcells.os.state.interface.lib/pom.xml
@@ -1,6 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <!--
+        SPDX-License-Identifier: EPL-2.0 OR MIT
+        SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
+    -->
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.splitcells</groupId>
     <artifactId>os.state.interface.lib</artifactId>
