--- a/projects/net.splitcells.pom.java.defaults/.gitignore
+++ b/projects/net.splitcells.pom.java.defaults/.gitignore
@@ -1,3 +1,5 @@
+# SPDX-License-Identifier: EPL-2.0 OR MIT
+# SPDX-FileCopyrightText: Contributors To The `net.splitcells.*` Projects
 ### Intellji
 *.iml
 .idea/
